# parallel_full_gyro

./: CMakeLists.txt  README.md
CMake/: FindFFTW.cmake  FindMKL.cmake  MPIConfig.cmake  OpenMPConfig.cmake
script/: buildgeos.sh  buildth2.sh  data_initial_input.nml  geospace_job.sh
simulations/: CMakeLists.txt
simulations/parallel/: .test_ful_integrated_simulation.F90.swp  CMakeLists.txt  test_ful_integrated_simulation.F90
simulations/parallel/integ_sim/: CMakeLists.txt  data_input.nml  integ_ful_f_per_per.F90  integ_onlyful.F90  integ_onlygy.F90  integ_per_per.F90  integ_simulation.F90
simulations/parallel/single_particle/: CMakeLists.txt  `  orbit_comparison.F90  orbit_comparison_one.F90  test_para_interpo3.F90  test_random_sample.F90
simulations/serial/: CMakeLists.txt  data_initial_input.nml  orbit_storing.F90  test_large_epotential.F90
src/: CMakeLists.txt
src/data_structure/: CMakeLists.txt  field_base.F90
src/data_structure/field_mesh/: CMakeLists.txt  field_2d_mesh.F90
src/data_structure/linkedlist/: list_basic.F90
src/data_structure/pic_layout/: CMakeLists.txt  orbit_data_base.F90  piclayout.F90
src/data_structure/testing/: CMakeLists.txt  test_initial_field.F90  test_initial_field_two.F90  test_suspect.F90
src/diagnosis/: CMakeLists.txt  diagnosis2D.F90
src/field_solver/: CMakeLists.txt  m_fieldsolver.F90
src/field_solver/qne_solver/: .qne_solver_utilities.F90.swp  qne_solver_utilities.F90
src/field_test/: CMakeLists.txt  field_initialize.F90
src/field_test/testing/: CMakeLists.txt  integral_of_distr.F90
src/gyroaverage/: CMakeLists.txt  gyroaverage_2d.F90  gyroaverage_2d_base.F90  gyroaverage_utilities.F90  para_gyroaverage_2d_one.F90
src/gyroaverage/testing/: CMakeLists.txt  test_first_gyroaverage.F90  test_gyroaverage.F90  test_lapack_blas.F90  test_para_gyroaverage.F90  test_suspect_two.F90
src/interpolation/: CMakeLists.txt  m_para_spline.F90  spline_module.F90
src/interpolation/testing/: CMakeLists.txt  test_com_natper.F90  test_interpolation.F90  test_interpotwo.F90  test_para_interpolation.F90  test_para_prepa.F90
src/low_level_utilities/: CMakeLists.txt
src/low_level_utilities/assert/: CMakeLists.txt  gp_assert.h  m_gp_assert.F90
src/low_level_utilities/assert/testing/: CMakeLists.txt  test_assert.F90
src/low_level_utilities/constants/: CMakeLists.txt  constants.F90
src/low_level_utilities/memory/: CMakeLists.txt  gp_memory.h  m_gp_memory.F90
src/low_level_utilities/memory/testing/: CMakeLists.txt  test_memory.F90
src/low_level_utilities/utilities/: CMakeLists.txt  utilities_module.F90
src/low_level_utilities/utilities/testing/: CMakeLists.txt  test_euler_maclaurin.F90  test_euler_maclaurin_nouse.F90
src/low_level_utilities/work_precision/: CMakeLists.txt  m_work_precision.F90  work_precision.h
src/low_level_utilities/work_precision/testing/: CMakeLists.txt  test_work_precision.F90
src/meshes/: CMakeLists.txt  abstract_mesh_base.F90  cartesian_mesh.F90
src/meshes/testing/: CMakeLists.txt  mesh_test.F90
src/orbit/: CMakeLists.txt  boris_rk_orbit.F90  m_para_orbit.F90  m_tp_para_orbit.F90  orbit_2d_2v.F90
src/orbit/testing/: CMakeLists.txt  test_gyorbit_allmu.F90  test_interp_elef.F90  test_para_orbit.F90  test_para_orbit_one.F90  test_rksolver.F90
src/outputdata/: CMakeLists.txt  para_write_file.F90
src/parafiles/: CMakeLists.txt
src/parafiles/mpi_layout/: CMakeLists.txt
src/parafiles/mpi_layout/collective/: CMakeLists.txt  m_collective.F90
src/parafiles/mpi_layout/mpilayout/: CMakeLists.txt  m_mpilayout.F90  paradata_structure.F90
src/parafiles/mpi_layout/mpilayout/testing/: CMakeLists.txt  test_mpilayout.F90
src/parafiles/paradata_layout/: CMakeLists.txt  paradata_layout.F90
src/parafiles/paradata_type/: CMakeLists.txt  paradata_type.F90
src/parafiles/parautilities/: CMakeLists.txt  m_parautilities.F90  paradata_utilities.F90
src/parafiles/parautilities/testing/: CMakeLists.txt  test_alltoallv_per_per.F90  test_alltoallv_subroutine.F90  test_paradata_utilities.F90  test_point_process.F90
src/pic/: CMakeLists.txt
src/pic/move_particles/: CMakeLists.txt  m_moveparticles.F90
src/pic/pic_utilities/: CMakeLists.txt  m_picutilities.F90  m_picutilities_single.F90
src/pic/pic_utilities/testing/: CMakeLists.txt  test_pic_utilities.F90
src/pic/random_sample/: CMakeLists.txt  congruence_sampling.F90  para_random_sample.F90
src/pic/random_sample/testing/: CMakeLists.txt  random_congruence.F90  random_sample.F90  random_sample_2d.F90  random_sample_mu.F90  test_para_random_sample.F90  test_pic_noise.F90
src/pic/testing/: CMakeLists.txt  test_para_partgrid_coupl.F90  test_para_partgrid_coupl_one.F90  test_para_pic.F90
src/pic/tp_preparation/: .tp_preparation.F90.swp  CMakeLists.txt  tp_preparation.F90
src/precomputing/: CMakeLists.txt  m_precompute.F90
src/precomputing/testing/: CMakeLists.txt  test_dgetri.F90  test_precomputing.F90  test_precomputing_nouse.F90
