ADD_SUBDIRECTORY( low_level_utilities )
ADD_SUBDIRECTORY( meshes )
ADD_SUBDIRECTORY( data_structure)
ADD_SUBDIRECTORY( parafiles)
ADD_SUBDIRECTORY( field_test )
ADD_SUBDIRECTORY( interpolation)
ADD_SUBDIRECTORY( gyroaverage )
ADD_SUBDIRECTORY( precomputing )
ADD_SUBDIRECTORY( orbit )
ADD_SUBDIRECTORY( pic )
ADD_SUBDIRECTORY( field_solver)
ADD_SUBDIRECTORY( outputdata )
